--- a/index.html
+++ b/index.html
@@ -9,12 +9,13 @@
     </head>
     <body>
         <div class="header">
-        <img src="ho.png">
+            <img src="ho.png">
         </div>
         <div class="container">
-            <div>
-                <h1 id="text"></h1>
-            </div>
+        <progress id="progressbar" value="0" max="100"></progress>
+        </div>
+        <div class="footer">
+        <div id="title"></div><div id="desc"></div>
         </div>
     </body>
 </html>
