--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     </head>
     <body>
         <div class="header">
-            <img src="ho.png">
+            <img src="logo.png">
         </div>
         <div class="container">
         <progress id="progressbar" value="0" max="100"></progress>
