--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
             <img src="logo.png">
         </div>
         <div class="container">
+        <div class="serverMessage"></div>
         <progress id="progressbar" value="0" max="100"></progress>
         </div>
         <div class="footer">
