--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <body>
         <div class="header">
             <img src="logo.png">
+            <img id="gameType" src="gametypes/slayer.png">
         </div>
         <div class="container">
         <div class="serverMessage"></div>
