--- a/index.html
+++ b/index.html
@@ -10,7 +10,9 @@
     <body>
         <div class="header">
             <img src="logo.png">
-            <img id="gameType" src="gametypes/slayer.png">
+            <div class="serverName"></div>
+            <img id="gametypeicon">
+            <div id="gametype"></div><div class="gamerounds">Rounds: <span id="gamerounds"></span></div><div class="gamescore">Score to Win: <span id="gamescore"></span></div><div class="timelimit">Time Limit: <span id="timelimit"></span></div>
         </div>
         <div class="container">
         <div class="serverMessage"></div>
