Adjust size/split to handle long names/messages

--- a/index.html
+++ b/index.html
@@ -12,7 +12,10 @@
             <img src="logo.png">
             <div class="serverName"></div>
             <img id="gametypeicon">
-            <div id="gametype"></div><div class="gamerounds">Rounds: <span id="gamerounds"></span></div><div class="gamescore">Score to Win: <span id="gamescore"></span></div><div class="timelimit">Time Limit: <span id="timelimit"></span></div>
+            <div id="gametype"></div>
+            <div class="gamerounds">Rounds: <span id="gamerounds"></span></div>
+            <div class="gamescore">Score to Win: <span id="gamescore"></span></div>
+            <div class="timelimit">Time Limit: <span id="timelimit"></span></div>
         </div>
         <div class="container">
         <div class="serverMessage"></div>
