--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
     </head>
     <body>
         <div class="header">
-            <img src="logo.png">
-            <div class="serverName"></div>
+            <img id="logo" src="logo.png">
+            <div class="serverName">Blah</div>
             <img id="gametypeicon">
             <div id="gametype"></div>
             <div class="gamerounds">Rounds: <span id="gamerounds"></span></div>
