New generic background, sorted formatting

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <body>
         <div class="header">
             <img id="logo" src="logo.png">
-            <div class="serverName">Blah</div>
+            <div class="serverName"></div>
             <img id="gametypeicon">
             <div id="gametype"></div>
             <div class="gamerounds">Rounds: <span id="gamerounds"></span></div>
@@ -18,11 +18,12 @@
             <div class="timelimit">Time Limit: <span id="timelimit"></span></div>
         </div>
         <div class="container">
-        <div class="serverMessage"></div>
-        <progress id="progressbar" value="0" max="100"></progress>
+            <div class="serverMessage"></div>
+            <progress id="progressbar" value="0" max="100"></progress>
         </div>
         <div class="footer">
-        <div id="title"></div><div id="desc"></div>
+            <div id="title"></div>
+            <div id="desc"></div>
         </div>
     </body>
 </html>
