--- a/index.html
+++ b/index.html
@@ -8,8 +8,12 @@
         <script type="text/javascript" src="loading.js"></script>
     </head>
     <body>
+		<div class="stars"></div>
+		<div class="ring"></div>
+		<div class="clouds"></div>
+		<div class="eldorito"></div>
         <div class="header">
-            <img id="logo" src="logo.png">
+            <img id="logo" src="images/logo.png">
             <div class="serverName"></div>
             <img id="gametypeicon">
             <div id="gametype"></div>
