@AssaultCommand did some amazing css animations
He just can't commit things. :)

--- a/index.html
+++ b/index.html
@@ -8,8 +8,9 @@
         <script type="text/javascript" src="loading.js"></script>
     </head>
     <body>
+        <!-- Game Loading Screen -->
         <div class="header">
-            <img id="logo" src="logo.png">
+            <img id="logo" src="images/logo.png">
             <div class="serverName"></div>
             <img id="gametypeicon">
             <div id="gametype"></div>
@@ -24,6 +25,15 @@
         <div class="footer">
             <div id="title"></div>
             <div id="desc"></div>
+        </div>
+
+        <!-- Generic Loading Screen -->
+        <div class="generic">
+          <div class="stars"></div>
+          <div class="ring"></div>
+          <div class="clouds"></div>
+          <div class="eldorito"></div>
+          <div class="eldorito loading"></div>
         </div>
     </body>
 </html>
